--- a/main.html
+++ b/main.html
@@ -5,8 +5,24 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
+<style>
+	blockquote{
+		max-width: 600px; 
+		margin: 10px;
+		 padding: 15px; 
+		 border-left: 8px solid green;
+		 background-color: #f8fffe"";
+		font-weight: bold
+	}
+</style>
 
 <body>
+	<h3>what is the capital of india?</h3>
+	<ul>
+		<li>New Delhi</li>
+		<li>Mumbai</li>
+	</ul>
+<blockquote> New Delhi is the capital of india and administrative district of NCT Delhi</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
