--- a/main.html
+++ b/main.html
@@ -17,11 +17,10 @@
 </style>
 
 <body>
-	<h3>what is the capital of india?</h3>
-	<ul>
-		<li>New Delhi</li>
-		<li>Mumbai</li>
-	</ul>
+
+	<h2>What is the capital of India?</h2>
+  <h3><input type="radio">New Delhi</h3>
+	<h3><input type="radio">Mumbai</h3>
 <blockquote> New Delhi is the capital of india and administrative district of NCT Delhi</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
