--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 <style>
 	blockquote{
-		max-width: 600px; 
+		width: 600px; 
 		margin: 10px;
 		 padding: 15px; 
 		 border-left: 8px solid green;
