--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <style>
-	blockquote{
+	h4{
 		width: 600px; 
 		margin: 10px;
 		 padding: 15px; 
@@ -21,7 +21,7 @@
 	<h2>What is the capital of India?</h2>
   <h3><input type="radio">New Delhi</h3>
 	<h3><input type="radio">Mumbai</h3>
-<blockquote> New Delhi is the capital of india and administrative district of NCT Delhi</blockquote>
+<h4><blockquote> New Delhi is the capital of india and administrative district of NCT Delhi</blockquote></h4>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
