--- a/main.html
+++ b/main.html
@@ -3,26 +3,21 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+   
+<link rel="stylesheet" href="stylee.css">
+
 </head>
-<style>
-	h4{
-		width: 600px; 
-		margin: 10px;
-		 padding: 15px; 
-		 border-left: 8px solid green;
-		 background-color: #f8fffe"";
-		font-weight: bold
-	}
-</style>
 
 <body>
-
-	<h2>What is the capital of India?</h2>
+	<!-- the entire body must be written by student -->
+   <h2>What is the capital of India?</h2>
   <h3><input type="radio">New Delhi</h3>
 	<h3><input type="radio">Mumbai</h3>
-<h4><blockquote> New Delhi is the capital of india and administrative district of NCT Delhi</blockquote></h4>
-	<!-- the entire body must be written by student -->
+   <h4>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+   </h4>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
